objects/Quote_Cloned_Check__e.object
<CustomObject>
    <fields>
        <fullName>PMC_CPQ_AccountId__c</fullName>
        <label>Account Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_QuoteId__c</fullName>
        <label>Quote Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_UserId__c</fullName>
        <label>User Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>Quote Cloned Check</label>
    <pluralLabel>Quote Cloned Check</pluralLabel>
</CustomObject>